# motion_control-

./: CMakeLists.txt  CartesianVelocityController.cpp  README  gendoc.sh  manifest.xml  orocos-motion_control.pc.in  stack.xml
cartesian_motion_control/: CMakeLists.txt  manifest.xml  package.xml
cartesian_motion_control/include/cartesian_motion_control/: cartesian_motion_control-types.hpp
cartesian_motion_control/src/: CMakeLists.txt  CartesianGeneratorPos.cpp  CartesianGeneratorPos.hpp  CartesianImpedanceController.hpp
motion_control_msgs/: CMakeLists.txt  package.xml
naxes_motion_control/: CMakeLists.txt  manifest.xml  package.xml
naxes_motion_control/src/: CMakeLists.txt  nAxesControllerPos.cpp  nAxesControllerPos.hpp  nAxesGeneratorPos.cpp  nAxesGeneratorPos.hpp
rtt_motion_control_msgs/: CMakeLists.txt  manifest.xml  package.xml
src/: CartesianControllerPos.cpp  CartesianControllerPos.hpp  CartesianControllerPosVel.hpp  CartesianControllerVel.cpp  CartesianControllerVel.hpp  CartesianGeneratorPos.cpp  CartesianGeneratorPos.hpp  CartesianVelocityController.hpp  kinematic_converter.cpp  kinematic_converter.hpp
