<package>
  <name>cartesian_motion_control</name>
  <version>0.1.0</version>
  <description>Orocos motion_control Component package</description>
  <maintainer email="dominick.vanthienen@frsrobotics.com">Dominick Vanthienen</maintainer>

  <license>GPLv2+</license>

  <url type="website">https://gitlab.mech.kuleuven.be/rob-hardware/motion_control</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ruben Smits, Klaas Gadeyne, Wim Meussen, Markus Klotzbuecher, Dominick Vanthienen</author>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>rtt_geometry_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>kdl_typekit</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>rtt_geometry_msgs</run_depend>

  <export>
    <plugin_depend>rtt_geometry_msgs</plugin_depend>

  </export>
</package>
